# bazel-examples

next.js/: WORKSPACE.bazel
next.js/apps/alpha/: BUILD.bazel  generate_dist.sh  next.config.js
next.js/bazel/: next.bzl
